--- a/apps/atlas/codegen-packages.yaml
+++ b/apps/atlas/codegen-packages.yaml
@@ -1,5 +1,5 @@
 overwrite: true
-schema: 'http://localhost:3333/graphql'
+schema: 'http://202.172.56.233:3333/graphql'
 documents: 'src/graphql/**/*.graphql'
 generates:
   src/generated/graphql-packages.tsx:
