--- a/apps/atlas/codegen.yaml
+++ b/apps/atlas/codegen.yaml
@@ -1,5 +1,5 @@
 overwrite: true
-schema: 'https://dev-indexer-gu226.ondigitalocean.app/graphql'
+schema: 'http://202.172.56.233:3333/graphql'
 documents: 'src/graphql/**/*.graphql'
 generates:
   src/generated/graphql.tsx:
